dev: poc :host styles issue in Stencil with Shadow DOM

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,13 @@
 
     <script type="module" src="/build/stencil-dsd.esm.js"></script>
     <script nomodule src="/build/stencil-dsd.js"></script>
+    <style>
+      my-component {
+        outline: 4px solid dodgerblue;
+      }
+    </style>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <my-component></my-component>
   </body>
 </html>
